<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00B0FF"
    android:padding="20dp"
    tools:context=".activities.EditNoteActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titletextview"
        android:text="@string/edit_title"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleinput"
            android:hint="Title"
            android:background="#3000B0FF"
            android:padding="10dp"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descriptioninput"
            android:hint="Decription"
            android:background="#3000B0FF"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:lines="10"
            android:gravity="top"/>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/savebtn"
        android:text="@string/save_edited_note"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:textColor="#00B0FF"/>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/cancel" />


</LinearLayout>